--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "org.moire.opensudoku"
         minSdkVersion 8
-        targetSdkVersion 22
-        versionCode 20150703
+        targetSdkVersion 23
+        versionCode getCustomVersion()
         versionName "2.2"
     }
     buildTypes {
         release {
+            debuggable false
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -20,7 +21,11 @@ android {
     }
 }
 
+def getCustomVersion() {
+    return (int) (((new Date()).getTime()/1000 - 1400000000) / 360);
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:design:23.1.1'
 }
