--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "org.moire.opensudoku"
-        minSdkVersion 8
+        applicationId "com.nkimkha.sudoku"
+        minSdkVersion 9
         targetSdkVersion 23
         versionCode getCustomVersion()
-        versionName "2.2"
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -28,4 +28,5 @@ def getCustomVersion() {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:design:23.1.1'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 }
