--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,7 @@ android {
         minSdkVersion 9
         targetSdkVersion 23
         versionCode getCustomVersion()
-        versionName "1.0"
-        resValue "string", "app_name", "AwSudoku"
+        versionName "0.1"
     }
     buildTypes {
         release {
@@ -18,6 +17,16 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            applicationIdSuffix ".debug"
+            resValue "string", "app_name", "Sudoku DEBUG"
+        }
+    }
+    productFlavors {
+        simple {
+            applicationId "com.nkimkha.sudoku"
+            resValue "string", "app_name", "Sudoku Free"
         }
     }
 }
